--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,3 +63,15 @@ server:
     idle-timeout: 15s
 polar:
   catalog-service-uri: "http://localhost:9001"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
