--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ java {
 ext {
 	set('springCloudVersion', "2023.0.2")
 	set('testKeycloakVersion', "3.3.1")
+	set('otelVersion', "1.33.3")
 }
 
 repositories {
@@ -39,6 +40,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.postgresql:r2dbc-postgresql'
