Actuator Endpoints Changes

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ repositories {
 	mavenCentral()
 }
 
+springBoot {
+	buildInfo()
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
