--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,17 +64,27 @@ server:
 polar:
   catalog-service-uri: "http://localhost:9001"
 
+info:
+  system: Polar Bookshop
+
 management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus
+        include: bindings, configprops, env, flyway, functions, health, heapdump, info, loggers, mappings, prometheus
   endpoint:
     health:
       show-details: always
       show-components: always
       probes:
         enabled: true
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
   metrics:
     tags:
       application: ${spring.application.name}
