--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+server:
+  port: 9002
+  shutdown: graceful
+  netty:
+    connection-timeout: 2s
+    idle-timeout: 15s
+
 spring:
   application:
     name: order-service
@@ -16,9 +23,10 @@ spring:
     password: ${spring.r2dbc.password}
     url: jdbc:postgresql://localhost:5432/polardb_order
   config:
-    import: "optional:configserver:"
+    import: "" # When using Config Service, add "optional:configserver:"
   cloud:
     config:
+      enabled: false # When using Config Service, set to true
       uri: http://localhost:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
@@ -42,7 +50,6 @@ spring:
           acceptOrder-out-0:
             producer:
               transacted: true
-
   rabbitmq:
     host: localhost
     port: 5672
@@ -55,14 +62,9 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/PolarBookshop
 
-server:
-  port: 9002
-  shutdown: graceful
-  netty:
-    connection-timeout: 2s
-    idle-timeout: 15s
-polar:
-  catalog-service-uri: "http://localhost:9001"
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
 info:
   system: Polar Bookshop
@@ -89,6 +91,5 @@ management:
     tags:
       application: ${spring.application.name}
 
-logging:
-  pattern:
-    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+polar:
+  catalog-service-uri: "http://localhost:9001"
